--- a/main/game/game.html
+++ b/main/game/game.html
@@ -226,10 +226,10 @@
             <script type="module" charset="utf-8" src="./wait.js"></script>
             <script type="module" charset="utf-8" src="./game.js"></script>
             <script type="module" charset="utf-8" src="./end.js"></script>
-            <!--<script type="module" charset="utf-8" src="/main/db.js"></script>-->
-            <!--<script type="module" charset="utf-8" src="/main/helper.js"></script>-->
-            <!--<script type="module" charset="utf-8" src="/main/parameters.js"></script>-->
-            <!--<script type="module" charset="utf-8" src="/puzzleGenerator/calc/calcDisplay.js"></script>-->
-            <!--<script type="module" charset="utf-8" src="/puzzleGenerator/calc/calcGenerator.js"></script>-->
+            <script type="module" charset="utf-8" src="/main/db.js"></script>
+            <script type="module" charset="utf-8" src="/main/helper.js"></script>
+            <script type="module" charset="utf-8" src="/main/parameters.js"></script>
+            <script type="module" charset="utf-8" src="/puzzleGenerator/calc/calcDisplay.js"></script>
+            <script type="module" charset="utf-8" src="/puzzleGenerator/calc/calcGenerator.js"></script>
         </body>
     </html>
