--- a/main/waitingRoom/waitingRoom.html
+++ b/main/waitingRoom/waitingRoom.html
@@ -163,5 +163,8 @@
         <script type="module" charset="utf-8" src="waitingRoom.js"></script>
         <script type="module" charset="utf-8" src="waitingRoomJoin.js"></script>
         <script type="module" charset="utf-8" src="waitingRoomStyle.js"></script>
+        <script type="module" charset="utf-8" src="/main/helper.js"></script>
+        <script type="module" charset="utf-8" src="/main/db.js"></script>
+        <script type="module" charset="utf-8" src="/puzzleGenerator/calc/calcGenerator.js"></script>
     </body>
 </html>
