--- a/main/game/game.html
+++ b/main/game/game.html
@@ -8,14 +8,14 @@
         <script src="https://www.geogebra.org/apps/deployggb.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-        <script charset="utf-8" src="/main/lib/node_modules/mathquill/build/mathquill.js"></script>
-        <link rel="stylesheet" href="/main/lib/node_modules/mathquill/build/mathquill.css" type="text/css" media="screen" title="no title" charset="utf-8">
+        <script charset="utf-8" src="./lib/node_modules/mathquill/build/mathquill.js"></script>
+        <link rel="stylesheet" href="./lib/node_modules/mathquill/build/mathquill.css" type="text/css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/katex.min.css" integrity="sha384-3UiQGuEI4TTMaFmGIZumfRPtfKQ3trwQE2JgosJxCnGmQpL/lJdjpcHkaaFwHlcI" crossorigin="anonymous">
         <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/katex.min.js" integrity="sha384-G0zcxDFp5LWZtDuRMnBkk3EphCK1lhEf4UEyEM693ka574TZGwo4IWwS6QLzM/2t" crossorigin="anonymous"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/contrib/auto-render.min.js" integrity="sha384-+VBxd3r6XgURycqtZ117nYw44OOcIax56Z4dCRWbxyPt0Koah1uHoK0o4+/RRE05" crossorigin="anonymous"></script> 
-        <script charset="utf-8" src="/main/lib/node_modules/mathjs/lib/browser/math.js"></script>
-        <script charset="utf-8" src="/main/lib/node_modules/nerdamer/nerdamer.core.js"></script>
-        <script charset="utf-8" src="/main/lib/node_modules/fraction.js/fraction.js"></script>
+        <script charset="utf-8" src="./lib/node_modules/mathjs/lib/browser/math.js"></script>
+        <script charset="utf-8" src="./lib/node_modules/nerdamer/nerdamer.core.js"></script>
+        <script charset="utf-8" src="./lib/node_modules/fraction.js/fraction.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,200" /> 
     </head>
     <body>
@@ -220,16 +220,16 @@
 
                 </div>
             </div>
-            <script type="module" charset="utf-8" src="/main/style.js"></script>
-            <script type="module" charset="utf-8" src="./gameStyle.js"></script>
-            <script type="module" charset="utf-8" src="./start.js"></script>
-            <script type="module" charset="utf-8" src="./wait.js"></script>
-            <script type="module" charset="utf-8" src="./game.js"></script>
-            <script type="module" charset="utf-8" src="./end.js"></script>
-            <script type="module" charset="utf-8" src="/main/db.js"></script>
-            <script type="module" charset="utf-8" src="/main/helper.js"></script>
-            <script type="module" charset="utf-8" src="/main/parameters.js"></script>
-            <script type="module" charset="utf-8" src="/puzzleGenerator/calc/calcDisplay.js"></script>
-            <script type="module" charset="utf-8" src="/puzzleGenerator/calc/calcGenerator.js"></script>
+            <script type="module" charset="utf-8" src="./main/style.js"></script>
+            <script type="module" charset="utf-8" src="./main/game/gameStyle.js"></script>
+            <script type="module" charset="utf-8" src="./main/game/start.js"></script>
+            <script type="module" charset="utf-8" src="./main/game/wait.js"></script>
+            <script type="module" charset="utf-8" src="./main/game/game.js"></script>
+            <script type="module" charset="utf-8" src="./main/game/end.js"></script>
+            <script type="module" charset="utf-8" src="./main/db.js"></script>
+            <script type="module" charset="utf-8" src="./main/helper.js"></script>
+            <script type="module" charset="utf-8" src="./main/parameters.js"></script>
+            <script type="module" charset="utf-8" src="./puzzleGenerator/calc/calcDisplay.js"></script>
+            <script type="module" charset="utf-8" src="./puzzleGenerator/calc/calcGenerator.js"></script>
         </body>
     </html>
