--- a/puzzleGenerator/puzzleGenerator.html
+++ b/puzzleGenerator/puzzleGenerator.html
@@ -8,11 +8,11 @@
         <script src="https://www.geogebra.org/apps/deployggb.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-        <script charset="utf-8" src="../lib/node_modules/mathquill/build/mathquill.js"></script>
-        <link rel="stylesheet" href="../lib/node_modules/mathquill/build/mathquill.css" type="text/css" media="screen" title="no title" charset="utf-8">
-        <script charset="utf-8" src="../lib/node_modules/mathjs/lib/browser/math.js"></script>
-        <script charset="utf-8" src="../lib/node_modules/nerdamer/nerdamer.core.js"></script>
-        <script charset="utf-8" src="../lib/node_modules/fraction.js/fraction.js"></script>
+        <script charset="utf-8" src="./lib/node_modules/mathquill/build/mathquill.js"></script>
+        <link rel="stylesheet" href="./lib/node_modules/mathquill/build/mathquill.css" type="text/css" media="screen" title="no title" charset="utf-8">
+        <script charset="utf-8" src="./lib/node_modules/mathjs/lib/browser/math.js"></script>
+        <script charset="utf-8" src="./lib/node_modules/nerdamer/nerdamer.core.js"></script>
+        <script charset="utf-8" src="./lib/node_modules/fraction.js/fraction.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,200" />
         <!--<link rel="stylesheet" href="/main/style.css" type="text/css" media="screen" title="no title" charset="utf-8">-->
     </head>
@@ -120,22 +120,22 @@
             </div>
         </div>
 
-        <script type="module" charset="utf-8" src="../main/parameters.js"></script>
-        <script type="module" charset="utf-8" src="../main/style.js"></script>
+        <script type="module" charset="utf-8" src="./main/parameters.js"></script>
+        <script type="module" charset="utf-8" src="./main/style.js"></script>
 
-        <script type="module" charset="utf-8" src="calc/calcDisplay.js"></script>
-        <script type="module" charset="utf-8" src="calc/calcPuzzles.js"></script>
-        <script type="module" charset="utf-8" src="calc/calcGenerator.js"></script>
+        <script type="module" charset="utf-8" src="./puzzleGenerator/calc/calcDisplay.js"></script>
+        <script type="module" charset="utf-8" src="./puzzleGenerator/calc/calcPuzzles.js"></script>
+        <script type="module" charset="utf-8" src="./puzzleGenerator/calc/calcGenerator.js"></script>
         <!--<script type="module" charset="utf-8" src="calc/calcUpload.js"></script>-->
 
-        <script type="module" charset="utf-8" src="ggbJS/ggbGenerator/basis.js"></script>
-        <script type="module" charset="utf-8" src="ggbJS/ggbGenerator/shapes.js"></script>
-        <script type="module" charset="utf-8" src="ggbJS/ggbGenerator/functions.js"></script>
-        <script type="module" charset="utf-8" src="ggbJS/ggbPuzzles.js"></script>
-        <script type="module" charset="utf-8" src="ggbJS/ggbUpload.js"></script>
-        <script type="module" charset="utf-8" src="ggbJS/ggbDisplay.js"></script>
-        <script type="module" charset="utf-8" src="puzzleGenerator.js"></script>
+        <script type="module" charset="utf-8" src="./puzzleGenerator/ggbJS/ggbGenerator/basis.js"></script>
+        <script type="module" charset="utf-8" src="./puzzleGenerator/ggbJS/ggbGenerator/shapes.js"></script>
+        <script type="module" charset="utf-8" src="./puzzleGenerator/ggbJS/ggbGenerator/functions.js"></script>
+        <script type="module" charset="utf-8" src="./puzzleGenerator/ggbJS/ggbPuzzles.js"></script>
+        <script type="module" charset="utf-8" src="./puzzleGenerator/ggbJS/ggbUpload.js"></script>
+        <script type="module" charset="utf-8" src="./puzzleGenerator/ggbJS/ggbDisplay.js"></script>
+        <script type="module" charset="utf-8" src="./puzzleGenerator/puzzleGenerator.js"></script>
         
-        <script type="module" charset="utf-8" src="databaseControl.js"></script>
+        <script type="module" charset="utf-8" src="./puzzleGenerator/databaseControl.js"></script>
     </body>
 </html>
