--- a/main/waitingRoom/waitingRoom.html
+++ b/main/waitingRoom/waitingRoom.html
@@ -8,9 +8,9 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,200" /> 
-        <script charset="utf-8" src="./lib/node_modules/mathjs/lib/browser/math.js"></script>
-        <script charset="utf-8" src="./lib/node_modules/nerdamer/nerdamer.core.js"></script>
-        <script charset="utf-8" src="./lib/node_modules/fraction.js/fraction.js"></script>
+        <script charset="utf-8" src="../../lib/node_modules/mathjs/lib/browser/math.js"></script>
+        <script charset="utf-8" src="../../lib/node_modules/nerdamer/nerdamer.core.js"></script>
+        <script charset="utf-8" src="../../lib/node_modules/fraction.js/fraction.js"></script>
     </head>
     <body>
         <p id="waiting-room-title" class="display-2 text-center mt-5"></p>
