--- a/main/waitingRoom/waitingRoom.html
+++ b/main/waitingRoom/waitingRoom.html
@@ -160,9 +160,9 @@
                 </div>
             </div>
         </div> 
-        <!--<script type="module" charset="utf-8" src="./main/waitingRoom/waitingRoom.js"></script>-->
-        <!--<script type="module" charset="utf-8" src="./main/waitingRoom/waitingRoomJoin.js"></script>-->
-        <!--<script type="module" charset="utf-8" src="./main/waitingRoom/waitingRoomStyle.js"></script>-->
+        <script type="module" charset="utf-8" src="../../main/waitingRoom/waitingRoom.js"></script>
+        <script type="module" charset="utf-8" src="../../main/waitingRoom/waitingRoomJoin.js"></script>
+        <script type="module" charset="utf-8" src="../../main/waitingRoom/waitingRoomStyle.js"></script>
         <!--<script type="module" charset="utf-8" src="./main/helper.js"></script>-->
         <!--<script type="module" charset="utf-8" src="./main/db.js"></script>-->
         <!--<script type="module" charset="utf-8" src="./puzzleGenerator/calc/calcGenerator.js"></script>-->
