--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 </span>
             </button>
         </div>
-        <script charset="utf-8" src="./main/helper.js"></script>
-        <script charset="utf-8">
+        <script type="module" charset="utf-8">
+            import {waitingRoomURL, puzzleGeneratorURL} from './main/helper.js'
             function openWaitingRoom(whichClass){
                 var schoolClass="class"+whichClass
                 <!--var url = "main/waitingRoom/waitingRoom.html"-->
