--- a/puzzleGenerator/puzzleGenerator.html
+++ b/puzzleGenerator/puzzleGenerator.html
@@ -121,21 +121,8 @@
         </div>
 
         <script type="module" charset="utf-8" src="../main/parameters.js"></script>
-        <script type="module" charset="utf-8" src="../main/style.js"></script>
-
-        <script type="module" charset="utf-8" src="../puzzleGenerator/calc/calcDisplay.js"></script>
-        <script type="module" charset="utf-8" src="../puzzleGenerator/calc/calcPuzzles.js"></script>
-        <script type="module" charset="utf-8" src="../puzzleGenerator/calc/calcGenerator.js"></script>
-        <!--<script type="module" charset="utf-8" src="calc/calcUpload.js"></script>-->
-
-        <script type="module" charset="utf-8" src="../puzzleGenerator/ggbJS/ggbGenerator/basis.js"></script>
-        <script type="module" charset="utf-8" src="../puzzleGenerator/ggbJS/ggbGenerator/shapes.js"></script>
-        <script type="module" charset="utf-8" src="../puzzleGenerator/ggbJS/ggbGenerator/functions.js"></script>
-        <script type="module" charset="utf-8" src="../puzzleGenerator/ggbJS/ggbPuzzles.js"></script>
-        <script type="module" charset="utf-8" src="../puzzleGenerator/ggbJS/ggbUpload.js"></script>
-        <script type="module" charset="utf-8" src="../puzzleGenerator/ggbJS/ggbDisplay.js"></script>
-        <script type="module" charset="utf-8" src="../puzzleGenerator/puzzleGenerator.js"></script>
-        
-        <script type="module" charset="utf-8" src="./puzzleGenerator/databaseControl.js"></script>
+        <script type="module" charset="utf-8" src="../main/style.js"></script> 
+        <script type="module" charset="utf-8" src="./puzzleGenerator.js"></script>
+        <script type="module" charset="utf-8" src="./databaseControl.js"></script>
     </body>
 </html>
