--- a/puzzleGenerator/puzzleGenerator_v2.html
+++ b/puzzleGenerator/puzzleGenerator_v2.html
@@ -126,7 +126,7 @@
         <script type="module" charset="utf-8" src="../main/parameters.js"></script>
         <script type="module" charset="utf-8" src="../main/style.js"></script> 
         <script type="module" charset="utf-8" src="./puzzleGenerator_v2.js"></script>
-        <script type="module" charset="utf-8" src="./databaseControl.js"></script>
+        <script type="module" charset="utf-8" src="./helper/databaseHelper.js"></script>
         <script type="module" charset="utf-8" src="../puzzles/link.js"></script>
     </body>
 </html>
