--- a/puzzleGenerator/puzzleGenerator_v2.html
+++ b/puzzleGenerator/puzzleGenerator_v2.html
@@ -127,6 +127,6 @@
         <script type="module" charset="utf-8" src="../main/style.js"></script> 
         <script type="module" charset="utf-8" src="./puzzleGenerator_v2.js"></script>
         <script type="module" charset="utf-8" src="./helper/databaseHelper.js"></script>
-        <script type="module" charset="utf-8" src="../puzzles/link.js"></script>
+        <script type="module" charset="utf-8" src="./helper/githubHelper.js"></script>
     </body>
 </html>
