--- a/puzzleGenerator/puzzleGenerator_v2.html
+++ b/puzzleGenerator/puzzleGenerator_v2.html
@@ -89,12 +89,14 @@
                         </button>
                     </div>
                     <div class="input-group mb-3">
-                        <select id="calc-topics" class="form-select border border-dark rounded-0"></select>
+                        <select id="calc-files" class="form-select border border-dark rounded-0"></select>
 
                     </div>
                     <div class="input-group mb-3">
-                        <select id="calc-topic" class="form-select border border-dark rounded-0"></select>
-
+                        <select id="file-arrays" class="form-select border border-dark rounded-0"></select>
+                    </div>
+                    <div class="input-group mb-3">
+                        <select id="array-questions" class="form-select border border-dark rounded-0"></select>
                     </div>
                     <div class="input-group mb-3 d-flex flex-row">
                         <button id="calc-upload-selected-button" class="btn btn-outline-dark rounded-0 flex-fill" type="button">
