--- a/puzzleGenerator/puzzleGenerator_v2.html
+++ b/puzzleGenerator/puzzleGenerator_v2.html
@@ -20,7 +20,7 @@
         <div id="game-room" class="container-fluid">
             <div class="row mt-3 mx-0">
                 <div id="left" class="col-8 my-2 ms-2"> 
-                    <div id="ggb" class="d-flex justify-content-center border border-dark position-relative d-none">
+                    <div id="ggb" class="d-flex justify-content-center border border-dark position-relative">
                         <div id="applet_container" class="" style=""></div>
                         <button id="geo" type="button" class="btn rounded-0 position-absolute" style="top:65px;left:5px">
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-rulers" viewBox="0 0 16 16">
@@ -30,7 +30,7 @@
                         <div id="ggb-problem-area" class="position-absolute bottom-0 center-0 bg-white border border-dark border-bottom-0 d-flex justify-content-center rounded-top-4" style="width:50%; height:15%">
                         </div>
                     </div>
-                    <div id="algebra" class="d-flex justify-content-center border border-dark p-2">
+                    <div id="algebra" class="d-flex justify-content-center border border-dark p-2 d-none">
                         <div id="algebra-problem-area" class="d-flex flex-column justify-content-center"> 
                             <div id="algebra-problem-area-flex" class="d-flex justify-content-center d-none">
                             </div>
