--- a/puzzleGenerator/puzzleGenerator_v2.html
+++ b/puzzleGenerator/puzzleGenerator_v2.html
@@ -22,7 +22,7 @@
                 <div id="left" class="col-8 my-2 ms-2"> 
                     <div id="ggb" class="d-flex justify-content-center border border-dark position-relative">
                         <div id="applet_container" class="" style=""></div>
-                        <button id="geo" type="button" class="btn rounded-0 position-absolute" style="top:65px;left:5px">
+                        <button id="geo" type="button" class="btn rounded-0 position-absolute d-none" style="top:65px;left:5px">
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-rulers" viewBox="0 0 16 16">
                             <path d="M1 0a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h5v-1H2v-1h4v-1H4v-1h2v-1H2v-1h4V9H4V8h2V7H2V6h4V2h1v4h1V4h1v2h1V2h1v4h1V4h1v2h1V2h1v4h1V1a1 1 0 0 0-1-1H1z"/>
                             </svg>
