--- a/puzzleGenerator/puzzleGenerator_v2.html
+++ b/puzzleGenerator/puzzleGenerator_v2.html
@@ -27,7 +27,7 @@
                             <path d="M1 0a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h5v-1H2v-1h4v-1H4v-1h2v-1H2v-1h4V9H4V8h2V7H2V6h4V2h1v4h1V4h1v2h1V2h1v4h1V4h1v2h1V2h1v4h1V1a1 1 0 0 0-1-1H1z"/>
                             </svg>
                         </button>
-                        <div id="ggb-problem-area" class="position-absolute bottom-0 center-0 bg-white border border-dark border-bottom-0 d-flex justify-content-center rounded-top-4" style="width:50%; height:15%">
+                        <div id="ggb-problem-area" class="position-absolute bottom-0 center-0 bg-white border border-dark border-bottom-0 d-flex justify-content-center rounded-top-4" style="width:50%; height:15%;opacity:1">
                         </div>
                     </div>
                     <div id="algebra" class="d-flex justify-content-center border border-dark p-2 d-none">
